# file-extension-checker

./: .gitignore  README.md  config_template.json  config_template.txt  main.py  pyproject.toml
